--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,22 +1,22 @@
-.container {
+.seccontainer {
     background-color: white;
     border: 0px solid ;
-    border-radius: 13px;
+    border-radius: 15px;
     width: 250px;
-    height: 410px;
+    height: 415px;
     text-align: center;
-    box-shadow: 1px 1px 8px hsl(219, 16%, 61%);
+    box-shadow: 2px 0 15px 1px hsl(219, 17%, 65%);
 }
 img {
     width: 230px;
     height: 230px;
-    padding: 10px 2px;
-    border-radius: 14px;
+    padding: 10px 5px;
+    border-radius: 15px;
 }
-body {
+.container {
     background-color: hsl(212, 45%, 89%);
-}
-main {
+    width: 100%;
+    height: 600px;
     font-family: outfit;
     text-align: center;
     display: flex;
@@ -27,19 +27,10 @@ main {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
     margin: 2px;
-    font-family: outfit;
     text-align: center;
 }
 .second {
     font-weight: 300;
     color: hsl(220, 15%, 55%);
     padding: 5px;
-}
-.attribution 
-{
-    font-size: 11px;
-    text-align: center;
-}
-.attribution a {
-    color: hsl(228, 45%, 44%); 
 }
