--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -16,7 +16,7 @@ img {
 .container {
     background-color: hsl(212, 45%, 89%);
     width: 100%;
-    height: 600px;
+    height: 100vh;
     font-family: outfit;
     text-align: center;
     display: flex;
